# MTPlayer

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/mtplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  RubberBandStretcherJNI.cpp  SoundTouchJNI.cpp
app/src/main/java/com/example/mtplayer/: FirstFragment.java  HomeFragment.java  MainActivity.java  PlayerFragment.java  PlaylistDetailFragment.java  PlaylistEditorActivity.java  PlaylistsFragment.java  SecondFragment.java  SongsFragment.java
app/src/main/java/com/example/mtplayer/adapters/: PlaylistAdapter.java  SelectableSongAdapter.java  SongAdapter.java
app/src/main/java/com/example/mtplayer/audio/: RubberBandAudioProcessor.java  (+3 more)
app/src/main/res/layout/: activity_main.xml  activity_playlist_editor.xml  fragment_first.xml  fragment_home.xml  fragment_player.xml  fragment_playlist_detail.xml  fragment_playlists.xml  fragment_second.xml  fragment_songs.xml  item_playlist.xml  item_selectable_song.xml  item_song.xml  layout_mini_player.xml
app/src/main/res/menu/: menu_main.xml  menu_playlist_editor.xml  menu_playlist_item.xml  menu_song_item.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/example/mtplayer/: ExampleUnitTest.java  PlaylistManagerTest.java  SongModelTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
